--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
 </head>
 <body>
     <div class="container">
+
+        <div class="hambuger">
+            <div class="line" id="line1"></div>
+            <div class="line" id="line2"></div>
+            <div class="line" id="line3"></div>
+            <span>Fechar</span>
+        </div>
+
         <header>
             <div class="img-wrapper">
                 <img src="images/bg.jpg" alt="Banner">
@@ -25,11 +33,33 @@
 
             </div>
         </header>
+
+        <div class="sideBar">
+            <nav>
+                <ul class="menu">
+                    <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Conhecimentos</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Projetos</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Contatos</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Orçamento </a></li>
+                </ul>
+            </nav>
+
+            <div class="social-media">
+                <div class=""><a target="_blank" href="https://www.instagram.com/salomao.faleta"><i class="fa-brands fa-instagram"></i></a></div>
+                <div class=""><a target="_blank" href="https://github.com/Salomao-Faleta"><i class="fa-brands fa-github"></i></a></div>
+                <div class=""><a target="_blank" href="https://www.facebook.com/salomao.silva.37201901/"><i class="fa-brands fa-facebook"></i></a></div>
+            </div>
+        </div>
+
+
+
     </div>
 
 
 
 
+    <script src="script.js"></script>
 </body>
 
 </html>
