--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
         </header>
 
-        <div class="sideBar">
+        <aside class="sideBar">
             <nav>
                 <ul class="menu">
                     <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
@@ -50,7 +50,7 @@
                 <div class=""><a target="_blank" href="https://github.com/Salomao-Faleta"><i class="fa-brands fa-github"></i></a></div>
                 <div class=""><a target="_blank" href="https://www.facebook.com/salomao.silva.37201901/"><i class="fa-brands fa-facebook"></i></a></div>
             </div>
-        </div>
+        </aside>
 
 
 
