#04: Seção Conhecimentos com Grid Layout   - package

--- a/index.html
+++ b/index.html
@@ -52,14 +52,82 @@
             </div>
         </aside>
 
+       <section class="sessao-conhecimentos">
+            <div class="sessao-header">
+                <h1>Conhecimentos</h1>
+            </div>
+            <div class="conhecimentos">
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fa-brands fa-html5"></i>
+                        <h3>Html</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium sit id ad vel. Expedita iste cupiditate sapiente tenetur itaque magnam porro quas, ipsa eveniet, dicta quidem fuga accusamus id ducimus?</p>
+                    </div>
+                </div>
+
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fa-brands fa-css3-alt"></i>
+                        <h3>Css</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium sit id ad vel. Expedita iste cupiditate sapiente tenetur itaque magnam porro quas, ipsa eveniet, dicta quidem fuga accusamus id ducimus?</p>
+                    </div>
+                </div>
+
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fa-brands fa-js"></i>
+                        <h3>JavaScript</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium sit id ad vel. Expedita iste cupiditate sapiente tenetur itaque magnam porro quas, ipsa eveniet, dicta quidem fuga accusamus id ducimus?</p>
+                    </div>
+                </div>
+
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fa-brands fa-python"></i>
+                        <h3>Python</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium sit id ad vel. Expedita iste cupiditate sapiente tenetur itaque magnam porro quas, ipsa eveniet, dicta quidem fuga accusamus id ducimus?</p>
+                    </div>
+                </div>
+
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fa-brands fa-github"></i>
+                        <h3>GitHub</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium sit id ad vel. Expedita iste cupiditate sapiente tenetur itaque magnam porro quas, ipsa eveniet, dicta quidem fuga accusamus id ducimus?</p>
+                    </div>
+                </div>
+
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fa-brands fa-react"></i>
+                        <h3>React</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium sit id ad vel. Expedita iste cupiditate sapiente tenetur itaque magnam porro quas, ipsa eveniet, dicta quidem fuga accusamus id ducimus?</p>
+                    </div>
+                </div>
+
+                <div class="conhecimentos-img-wrapper">
+                    <img src="images/conhecimento.jpg" alt="Imagem Conhecimentos">
+                </div>
+
+            </div>
+       </section>
+
 
 
     </div>
 
-
-
-
     <script src="script.js"></script>
 </body>
-
 </html>
