--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
     <div class="container">
 
@@ -52,7 +53,7 @@
             </div>
         </aside>
 
-       <section class="sessao-conhecimentos">
+        <section class="sessao-conhecimentos">
             <div class="sessao-header">
                 <h1>Conhecimentos</h1>
             </div>
@@ -63,7 +64,10 @@
                         <h3>Html</h3>
                     </div>
                     <div class="conhecimento-text">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium sit id ad vel. Expedita iste cupiditate sapiente tenetur itaque magnam porro quas, ipsa eveniet, dicta quidem fuga accusamus id ducimus?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium sit id ad vel. Expedita
+                            iste cupiditate sapiente tenetur itaque magnam porro quas, ipsa eveniet, dicta quidem fuga
+                            accusamus id ducimus?
+                        </p>
                     </div>
                 </div>
 
@@ -73,7 +77,10 @@
                         <h3>Css</h3>
                     </div>
                     <div class="conhecimento-text">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium sit id ad vel. Expedita iste cupiditate sapiente tenetur itaque magnam porro quas, ipsa eveniet, dicta quidem fuga accusamus id ducimus?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium sit id ad vel. Expedita
+                            iste cupiditate sapiente tenetur itaque magnam porro quas, ipsa eveniet, dicta quidem fuga
+                            accusamus id ducimus?
+                        </p>
                     </div>
                 </div>
 
@@ -83,7 +90,10 @@
                         <h3>JavaScript</h3>
                     </div>
                     <div class="conhecimento-text">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium sit id ad vel. Expedita iste cupiditate sapiente tenetur itaque magnam porro quas, ipsa eveniet, dicta quidem fuga accusamus id ducimus?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium sit id ad vel. Expedita
+                            iste cupiditate sapiente tenetur itaque magnam porro quas, ipsa eveniet, dicta quidem fuga
+                            accusamus id ducimus?
+                        </p>
                     </div>
                 </div>
 
@@ -93,7 +103,10 @@
                         <h3>Python</h3>
                     </div>
                     <div class="conhecimento-text">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium sit id ad vel. Expedita iste cupiditate sapiente tenetur itaque magnam porro quas, ipsa eveniet, dicta quidem fuga accusamus id ducimus?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium sit id ad vel. Expedita
+                            iste cupiditate sapiente tenetur itaque magnam porro quas, ipsa eveniet, dicta quidem fuga
+                            accusamus id ducimus?
+                        </p>
                     </div>
                 </div>
 
@@ -103,7 +116,10 @@
                         <h3>GitHub</h3>
                     </div>
                     <div class="conhecimento-text">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium sit id ad vel. Expedita iste cupiditate sapiente tenetur itaque magnam porro quas, ipsa eveniet, dicta quidem fuga accusamus id ducimus?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium sit id ad vel. Expedita
+                            iste cupiditate sapiente tenetur itaque magnam porro quas, ipsa eveniet, dicta quidem fuga
+                            accusamus id ducimus?
+                        </p>
                     </div>
                 </div>
 
@@ -113,7 +129,10 @@
                         <h3>React</h3>
                     </div>
                     <div class="conhecimento-text">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium sit id ad vel. Expedita iste cupiditate sapiente tenetur itaque magnam porro quas, ipsa eveniet, dicta quidem fuga accusamus id ducimus?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium sit id ad vel. Expedita
+                            iste cupiditate sapiente tenetur itaque magnam porro quas, ipsa eveniet, dicta quidem fuga
+                            accusamus id ducimus?
+                        </p>
                     </div>
                 </div>
 
@@ -122,7 +141,60 @@
                 </div>
 
             </div>
-       </section>
+        </section>
+
+        <section class="sessao-projetos">
+            <div class="sessao-header">
+                <h1>Projetos</h1>
+            </div>
+            <div class="projetos">
+                <div class="card">
+                    <div class="card-img-wrapper">
+                        <img src="images/img-car1.jpg" alt="Imagem Do Projeto Starbucks">
+                    </div>
+                    <div class="card-info">
+                        <h2>Starbucks</h2>
+                        <h3>HTML5 e CSS3</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias praesentium recusandae sequi dolorem alias, deleniti vel fuga explicabo saepe reprehenderit. Eveniet dolor ab perferendis architecto repudiandae optio sint consequatur tempora!</p>
+                        <button>
+                            <a href="https://salomao-faleta.github.io/Projeto-Starbucks/" target="_blank">Veja o
+                                Projeto</a>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-img-wrapper">
+                        <img src="images/img-card2.jpg" alt="Imagem Do Projeto Pizza">
+                    </div>
+                    <div class="card-info">
+                        <h2>Pizza</h2>
+                        <h3>JavaScript</h3>
+                        <p>Descrição do Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis praesentium voluptatum cumque pariatur laborum in harum nobis nulla doloremque obcaecati deserunt, omnis repellat dolorem aut quia dignissimos magni quibusdam rerum.</p>
+                        <button>
+                            <a href="https://salomao-faleta.github.io/Projeto-Pizza/" target="_blank">Veja o Projeto</a>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-img-wrapper">
+                        <img src="images/img-card3.jpg" alt="Imagem do Projeto ">
+                    </div>
+                    <div class="card-info">
+                        <h2>Quiz</h2>
+                        <h3>HTML5 e CSS c/ JS</h3>
+                        <p>Descrição do projeto Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, voluptate voluptates aliquid nemo, cum ducimus voluptatum vel necessitatibus autem ut sequi atque sit corrupti magni iure, possimus repudiandae praesentium nam!</p>
+                        <button>
+                            <a href="https://salomao-faleta.github.io/Projeto-Quiz/" target="_blank">Veja o Projeto</a>
+                        </button>
+                    </div>
+                </div>
+
+                
+
+            </div>
+        </section>
 
 
 
@@ -130,4 +202,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
