#05: Seção Projetos com Cards - up

--- a/index.html
+++ b/index.html
@@ -191,6 +191,20 @@
                     </div>
                 </div>
 
+                <div class="card">
+                    <div class="card-img-wrapper">
+                        <img src="images/img-car1.jpg" alt="Imagem do Projeto Urna Eletrônica">
+                    </div>
+                    <div class="card-info">
+                        <h2>Urna Eletrônica</h2>
+                        <h3>JavaScript</h3>
+                        <p>Descrição do projeto Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, voluptate voluptates aliquid nemo, cum ducimus voluptatum vel necessitatibus autem ut sequi atque sit corrupti magni iure, possimus repudiandae praesentium nam!</p>
+                        <button>
+                            <a href="https://salomao-faleta.github.io/Projetos-JS-B7WEB/Urna-Eletr%C3%B4nica/" target="_blank">Veja o Projeto</a>
+                        </button>
+                    </div>
+                </div>
+
                 
 
             </div>
