#04: Seção Conhecimentos com Grid Layout - up

--- a/index.html
+++ b/index.html
@@ -55,32 +55,26 @@
 
         <section class="sessao-conhecimentos">
             <div class="sessao-header">
-                <h1>Conhecimentos</h1>
+                <h1></h1>
             </div>
             <div class="conhecimentos">
                 <div class="conhecimento">
                     <div class="conhecimento-header">
                         <i class="fa-brands fa-html5"></i>
-                        <h3>Html</h3>
+                        <h3>HTML5</h3>
                     </div>
                     <div class="conhecimento-text">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium sit id ad vel. Expedita
-                            iste cupiditate sapiente tenetur itaque magnam porro quas, ipsa eveniet, dicta quidem fuga
-                            accusamus id ducimus?
-                        </p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. At accusantium, vitae aut modi non repellat sequi tempora assumenda rem hic mollitia numquam est exercitationem dolores fugiat nemo ab atque ducimus.
                     </div>
                 </div>
 
                 <div class="conhecimento">
                     <div class="conhecimento-header">
                         <i class="fa-brands fa-css3-alt"></i>
-                        <h3>Css</h3>
+                        <h3>CSS3</h3>
                     </div>
                     <div class="conhecimento-text">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium sit id ad vel. Expedita
-                            iste cupiditate sapiente tenetur itaque magnam porro quas, ipsa eveniet, dicta quidem fuga
-                            accusamus id ducimus?
-                        </p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. At accusantium, vitae aut modi non repellat sequi tempora assumenda rem hic mollitia numquam est exercitationem dolores fugiat nemo ab atque ducimus.
                     </div>
                 </div>
 
@@ -90,10 +84,7 @@
                         <h3>JavaScript</h3>
                     </div>
                     <div class="conhecimento-text">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium sit id ad vel. Expedita
-                            iste cupiditate sapiente tenetur itaque magnam porro quas, ipsa eveniet, dicta quidem fuga
-                            accusamus id ducimus?
-                        </p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. At accusantium, vitae aut modi non repellat sequi tempora assumenda rem hic mollitia numquam est exercitationem dolores fugiat nemo ab atque ducimus.
                     </div>
                 </div>
 
@@ -103,10 +94,16 @@
                         <h3>Python</h3>
                     </div>
                     <div class="conhecimento-text">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium sit id ad vel. Expedita
-                            iste cupiditate sapiente tenetur itaque magnam porro quas, ipsa eveniet, dicta quidem fuga
-                            accusamus id ducimus?
-                        </p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. At accusantium, vitae aut modi non repellat sequi tempora assumenda rem hic mollitia numquam est exercitationem dolores fugiat nemo ab atque ducimus.
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fa-brands fa-react"></i>
+                        <h3>React</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. At accusantium, vitae aut modi non repellat sequi tempora assumenda rem hic mollitia numquam est exercitationem dolores fugiat nemo ab atque ducimus.
                     </div>
                 </div>
 
@@ -116,28 +113,12 @@
                         <h3>GitHub</h3>
                     </div>
                     <div class="conhecimento-text">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium sit id ad vel. Expedita
-                            iste cupiditate sapiente tenetur itaque magnam porro quas, ipsa eveniet, dicta quidem fuga
-                            accusamus id ducimus?
-                        </p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. At accusantium, vitae aut modi non repellat sequi tempora assumenda rem hic mollitia numquam est exercitationem dolores fugiat nemo ab atque ducimus.
                     </div>
                 </div>
 
-                <div class="conhecimento">
-                    <div class="conhecimento-header">
-                        <i class="fa-brands fa-react"></i>
-                        <h3>React</h3>
-                    </div>
-                    <div class="conhecimento-text">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium sit id ad vel. Expedita
-                            iste cupiditate sapiente tenetur itaque magnam porro quas, ipsa eveniet, dicta quidem fuga
-                            accusamus id ducimus?
-                        </p>
-                    </div>
-                </div>
-
-                <div class="conhecimentos-img-wrapper">
-                    <img src="images/conhecimento.jpg" alt="Imagem Conhecimentos">
+                <div class="conhecimento-img-wrapper">
+                    <img src="images/conhecimento.jpg" alt="Imagem de Conhecimento">
                 </div>
 
             </div>
