--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <section class="sessao-conhecimentos">
             <div class="sessao-header">
-                <h1></h1>
+                <h1>Conhecimentos</h1>
             </div>
             <div class="conhecimentos">
                 <div class="conhecimento">
