#06: Formulário de contat - package

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="banner">
                 <h1>Web Developer & Front End Designer</h1>
                 <p>Salomão F.A.C Silva</p>
-                <button>Sabia Mais</button>
+                <button class="btn">Sabia Mais</button>
 
             </div>
         </header>
@@ -137,7 +137,7 @@
                         <h2>Starbucks</h2>
                         <h3>HTML5 e CSS3</h3>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias praesentium recusandae sequi dolorem alias, deleniti vel fuga explicabo saepe reprehenderit. Eveniet dolor ab perferendis architecto repudiandae optio sint consequatur tempora!</p>
-                        <button>
+                        <button class="btn">
                             <a href="https://salomao-faleta.github.io/Projeto-Starbucks/" target="_blank">Veja o
                                 Projeto</a>
                         </button>
@@ -152,7 +152,7 @@
                         <h2>Pizza</h2>
                         <h3>JavaScript</h3>
                         <p>Descrição do Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis praesentium voluptatum cumque pariatur laborum in harum nobis nulla doloremque obcaecati deserunt, omnis repellat dolorem aut quia dignissimos magni quibusdam rerum.</p>
-                        <button>
+                        <button class="btn">
                             <a href="https://salomao-faleta.github.io/Projeto-Pizza/" target="_blank">Veja o Projeto</a>
                         </button>
                     </div>
@@ -166,7 +166,7 @@
                         <h2>Quiz</h2>
                         <h3>HTML5 e CSS c/ JS</h3>
                         <p>Descrição do projeto Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, voluptate voluptates aliquid nemo, cum ducimus voluptatum vel necessitatibus autem ut sequi atque sit corrupti magni iure, possimus repudiandae praesentium nam!</p>
-                        <button>
+                        <button class="btn">
                             <a href="https://salomao-faleta.github.io/Projeto-Quiz/" target="_blank">Veja o Projeto</a>
                         </button>
                     </div>
@@ -180,14 +180,39 @@
                         <h2>Urna Eletrônica</h2>
                         <h3>JavaScript</h3>
                         <p>Descrição do projeto Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, voluptate voluptates aliquid nemo, cum ducimus voluptatum vel necessitatibus autem ut sequi atque sit corrupti magni iure, possimus repudiandae praesentium nam!</p>
-                        <button>
+                        <button class="btn">
                             <a href="https://salomao-faleta.github.io/Projetos-JS-B7WEB/Urna-Eletr%C3%B4nica/" target="_blank">Veja o Projeto</a>
                         </button>
                     </div>
                 </div>
 
-                
+            </div>
+        </section>
 
+        <section class="sessao-contato">
+            <div class="contato-wrapper">
+                <div class="contato-left">s</div>
+                <div class="contato-right">
+                    <h1>Contato</h1>
+                    <form action="" method="post">
+                        <div class="input-group">
+                            <input type="text" class="field" id="nome">
+                            <label for="nome" class="field-label">Nome</label>
+                        </div>
+
+                        <div class="input-group">
+                            <input type="text" class="field" id="email">
+                            <label for="email" class="field-label">E-mail</label>
+                        </div>
+                        
+                        <div class="input-group">
+                            <textarea class="field" id="mensagem"></textarea>
+                            <label for="mensagem" class="field-label">Mensagem</label>
+                        </div>
+
+                        <button type="submit" class="btn btn-submit">Enviar</button>
+                    </form>
+                </div>
             </div>
         </section>
 
