--- a/index.html
+++ b/index.html
@@ -216,6 +216,38 @@
             </div>
         </section>
 
+        <section class="sessao-orçamento">
+            <div class="orçamento-wrapper">
+                <h1>Faça um Orçamento</h1>
+                <form action="">
+                    <label for="qtde">Quantidade de Páginas</label>
+                    <input type="number" min="1" name="qtde" id="qtde">
+
+                    <label for="js">Preciso de um Script JS</label>
+                    <input type="checkbox" name="js" id="Js">
+
+                    <label for="layout">Layout</label>
+                    <div class="group-layout">
+                        <div>
+                            <input type="radio" name="layout" id="layout-sim">
+                            <label for="layout-sim">Preciso de um Layout</label>
+                        </div>
+                        <div>
+                            <input type="radio" name="layout" id="layout-nao">
+                            <label for="layout-sim">Já tenho de um Layout</label>
+                        </div>
+                    </div>
+
+                    <label for="prazo">Prazo</label>
+                    <input type="range" name="prazo" id="prazo" value="100">
+
+                    <button type="submit" class="btn btn-orçamento">Enviar</button>
+
+
+                </form>
+            </div>
+        </section>
+
 
 
     </div>
