--- a/index.html
+++ b/index.html
@@ -39,21 +39,24 @@
             <nav>
                 <ul class="menu">
                     <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
-                    <li class="menu-item"><a href="#" class="menu-link">Conhecimentos</a></li>
-                    <li class="menu-item"><a href="#" class="menu-link">Projetos</a></li>
-                    <li class="menu-item"><a href="#" class="menu-link">Contatos</a></li>
-                    <li class="menu-item"><a href="#" class="menu-link">Orçamento </a></li>
+                    <li class="menu-item"><a href="#conhecimentos" class="menu-link">Conhecimentos</a></li>
+                    <li class="menu-item"><a href="#projetos" class="menu-link">Projetos</a></li>
+                    <li class="menu-item"><a href="#contato" class="menu-link">Contatos</a></li>
+                    <li class="menu-item"><a href="#orçamento" class="menu-link">Orçamento </a></li>
                 </ul>
             </nav>
 
             <div class="social-media">
-                <div class=""><a target="_blank" href="https://www.instagram.com/salomao.faleta"><i class="fa-brands fa-instagram"></i></a></div>
-                <div class=""><a target="_blank" href="https://github.com/Salomao-Faleta"><i class="fa-brands fa-github"></i></a></div>
-                <div class=""><a target="_blank" href="https://www.facebook.com/salomao.silva.37201901/"><i class="fa-brands fa-facebook"></i></a></div>
+                <div class=""><a target="_blank" href="https://www.instagram.com/salomao.faleta"><i
+                            class="fa-brands fa-instagram"></i></a></div>
+                <div class=""><a target="_blank" href="https://github.com/Salomao-Faleta"><i
+                            class="fa-brands fa-github"></i></a></div>
+                <div class=""><a target="_blank" href="https://www.facebook.com/salomao.silva.37201901/"><i
+                            class="fa-brands fa-facebook"></i></a></div>
             </div>
         </aside>
 
-        <section class="sessao-conhecimentos">
+        <section class="sessao-conhecimentos" id="conhecimentos">
             <div class="sessao-header">
                 <h1>Conhecimentos</h1>
             </div>
@@ -64,7 +67,9 @@
                         <h3>HTML5</h3>
                     </div>
                     <div class="conhecimento-text">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. At accusantium, vitae aut modi non repellat sequi tempora assumenda rem hic mollitia numquam est exercitationem dolores fugiat nemo ab atque ducimus.
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. At accusantium, vitae aut modi non
+                        repellat sequi tempora assumenda rem hic mollitia numquam est exercitationem dolores fugiat nemo
+                        ab atque ducimus.
                     </div>
                 </div>
 
@@ -74,7 +79,9 @@
                         <h3>CSS3</h3>
                     </div>
                     <div class="conhecimento-text">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. At accusantium, vitae aut modi non repellat sequi tempora assumenda rem hic mollitia numquam est exercitationem dolores fugiat nemo ab atque ducimus.
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. At accusantium, vitae aut modi non
+                        repellat sequi tempora assumenda rem hic mollitia numquam est exercitationem dolores fugiat nemo
+                        ab atque ducimus.
                     </div>
                 </div>
 
@@ -84,7 +91,9 @@
                         <h3>JavaScript</h3>
                     </div>
                     <div class="conhecimento-text">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. At accusantium, vitae aut modi non repellat sequi tempora assumenda rem hic mollitia numquam est exercitationem dolores fugiat nemo ab atque ducimus.
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. At accusantium, vitae aut modi non
+                        repellat sequi tempora assumenda rem hic mollitia numquam est exercitationem dolores fugiat nemo
+                        ab atque ducimus.
                     </div>
                 </div>
 
@@ -94,7 +103,9 @@
                         <h3>Python</h3>
                     </div>
                     <div class="conhecimento-text">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. At accusantium, vitae aut modi non repellat sequi tempora assumenda rem hic mollitia numquam est exercitationem dolores fugiat nemo ab atque ducimus.
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. At accusantium, vitae aut modi non
+                        repellat sequi tempora assumenda rem hic mollitia numquam est exercitationem dolores fugiat nemo
+                        ab atque ducimus.
                     </div>
                 </div>
                 <div class="conhecimento">
@@ -103,7 +114,9 @@
                         <h3>React</h3>
                     </div>
                     <div class="conhecimento-text">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. At accusantium, vitae aut modi non repellat sequi tempora assumenda rem hic mollitia numquam est exercitationem dolores fugiat nemo ab atque ducimus.
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. At accusantium, vitae aut modi non
+                        repellat sequi tempora assumenda rem hic mollitia numquam est exercitationem dolores fugiat nemo
+                        ab atque ducimus.
                     </div>
                 </div>
 
@@ -113,7 +126,9 @@
                         <h3>GitHub</h3>
                     </div>
                     <div class="conhecimento-text">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. At accusantium, vitae aut modi non repellat sequi tempora assumenda rem hic mollitia numquam est exercitationem dolores fugiat nemo ab atque ducimus.
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. At accusantium, vitae aut modi non
+                        repellat sequi tempora assumenda rem hic mollitia numquam est exercitationem dolores fugiat nemo
+                        ab atque ducimus.
                     </div>
                 </div>
 
@@ -124,7 +139,7 @@
             </div>
         </section>
 
-        <section class="sessao-projetos">
+        <section class="sessao-projetos" id="projetos">
             <div class="sessao-header">
                 <h1>Projetos</h1>
             </div>
@@ -136,7 +151,9 @@
                     <div class="card-info">
                         <h2>Starbucks</h2>
                         <h3>HTML5 e CSS3</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias praesentium recusandae sequi dolorem alias, deleniti vel fuga explicabo saepe reprehenderit. Eveniet dolor ab perferendis architecto repudiandae optio sint consequatur tempora!</p>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias praesentium recusandae
+                            sequi dolorem alias, deleniti vel fuga explicabo saepe reprehenderit. Eveniet dolor ab
+                            perferendis architecto repudiandae optio sint consequatur tempora!</p>
                         <button class="btn">
                             <a href="https://salomao-faleta.github.io/Projeto-Starbucks/" target="_blank">Veja o
                                 Projeto</a>
@@ -151,7 +168,9 @@
                     <div class="card-info">
                         <h2>Pizza</h2>
                         <h3>JavaScript</h3>
-                        <p>Descrição do Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis praesentium voluptatum cumque pariatur laborum in harum nobis nulla doloremque obcaecati deserunt, omnis repellat dolorem aut quia dignissimos magni quibusdam rerum.</p>
+                        <p>Descrição do Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis praesentium
+                            voluptatum cumque pariatur laborum in harum nobis nulla doloremque obcaecati deserunt, omnis
+                            repellat dolorem aut quia dignissimos magni quibusdam rerum.</p>
                         <button class="btn">
                             <a href="https://salomao-faleta.github.io/Projeto-Pizza/" target="_blank">Veja o Projeto</a>
                         </button>
@@ -165,7 +184,9 @@
                     <div class="card-info">
                         <h2>Quiz</h2>
                         <h3>HTML5 e CSS c/ JS</h3>
-                        <p>Descrição do projeto Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, voluptate voluptates aliquid nemo, cum ducimus voluptatum vel necessitatibus autem ut sequi atque sit corrupti magni iure, possimus repudiandae praesentium nam!</p>
+                        <p>Descrição do projeto Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, voluptate
+                            voluptates aliquid nemo, cum ducimus voluptatum vel necessitatibus autem ut sequi atque sit
+                            corrupti magni iure, possimus repudiandae praesentium nam!</p>
                         <button class="btn">
                             <a href="https://salomao-faleta.github.io/Projeto-Quiz/" target="_blank">Veja o Projeto</a>
                         </button>
@@ -179,9 +200,12 @@
                     <div class="card-info">
                         <h2>Urna Eletrônica</h2>
                         <h3>JavaScript</h3>
-                        <p>Descrição do projeto Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, voluptate voluptates aliquid nemo, cum ducimus voluptatum vel necessitatibus autem ut sequi atque sit corrupti magni iure, possimus repudiandae praesentium nam!</p>
+                        <p>Descrição do projeto Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, voluptate
+                            voluptates aliquid nemo, cum ducimus voluptatum vel necessitatibus autem ut sequi atque sit
+                            corrupti magni iure, possimus repudiandae praesentium nam!</p>
                         <button class="btn">
-                            <a href="https://salomao-faleta.github.io/Projetos-JS-B7WEB/Urna-Eletr%C3%B4nica/" target="_blank">Veja o Projeto</a>
+                            <a href="https://salomao-faleta.github.io/Projetos-JS-B7WEB/Urna-Eletr%C3%B4nica/"
+                                target="_blank">Veja o Projeto</a>
                         </button>
                     </div>
                 </div>
@@ -189,7 +213,7 @@
             </div>
         </section>
 
-        <section class="sessao-contato">
+        <section class="sessao-contato" id="contato">
             <div class="contato-wrapper">
                 <div class="contato-left">s</div>
                 <div class="contato-right">
@@ -204,7 +228,7 @@
                             <input type="text" class="field" id="email">
                             <label for="email" class="field-label">E-mail</label>
                         </div>
-                        
+
                         <div class="input-group">
                             <textarea class="field" id="mensagem"></textarea>
                             <label for="mensagem" class="field-label">Mensagem</label>
@@ -216,7 +240,7 @@
             </div>
         </section>
 
-        <section class="sessao-orçamento">
+        <section class="sessao-orçamento" id="orçamento">
             <div class="orçamento-wrapper">
                 <h1>Faça um Orçamento</h1>
                 <form action="">
@@ -247,6 +271,23 @@
                 </form>
             </div>
         </section>
+
+        <footer>
+            <div class="footer-content">
+                <p>
+                    coryRight &copy; 2023 - Todos os Direitos Reservados
+                </p>
+                <div class="social-list">
+                    <ul>
+                        <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
+                        <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href=""><i class="fa-brands fa-github"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
+
+        <a href="" id="linkTopo"><i class="fa-solid fa-arrow-up"></i></a>
 
 
 
