--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <span>Fechar</span>
         </div>
 
-        <header>
+        <header> 
             <div class="img-wrapper">
                 <img src="images/bg.jpg" alt="Banner">
             </div>
@@ -258,12 +258,14 @@
                         </div>
                         <div>
                             <input type="radio" name="layout" id="layout-nao">
-                            <label for="layout-sim">Já tenho de um Layout</label>
+                            <label for="layout-nao">Já tenho de um Layout</label>
                         </div>
                     </div>
 
-                    <label for="prazo">Prazo</label>
-                    <input type="range" name="prazo" id="prazo" value="100">
+                    <label for="prazo">Prazo: 1 Semanas</label>
+                    <input type="range" name="prazo" id="prazo" min="1" max="10" value="1">
+
+                    <label id="preco">R$0,00</label>
 
                     <button type="submit" class="btn btn-orçamento">Enviar</button>
 
@@ -287,7 +289,7 @@
             </div>
         </footer>
 
-        <a href="" id="linkTopo"><i class="fa-solid fa-arrow-up"></i></a>
+        <a href="#" id="linkTopo"><i class="fa-solid fa-arrow-up"></i></a>
 
 
 
