--- a/index.html
+++ b/index.html
@@ -281,9 +281,9 @@
                 </p>
                 <div class="social-list">
                     <ul>
-                        <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
-                        <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
-                        <li><a href=""><i class="fa-brands fa-github"></i></a></li>
+                        <li><a href="https://www.instagram.com/salomao.faleta" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href="https://github.com/Salomao-Faleta" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+                        <li><a href="https://www.facebook.com/salomao.silva.37201901/" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
                     </ul>
                 </div>
             </div>
