--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
         <section class="sessao-contato" id="contato">
             <div class="contato-wrapper">
-                <div class="contato-left">s</div>
+                <div class="contato-left"></div>
                 <div class="contato-right">
                     <h1>Contato</h1>
                     <form action="" method="post">
