sessao-contato (novo) - up

--- a/index.html
+++ b/index.html
@@ -217,6 +217,42 @@
         </section>
 
 
+        <section class="sessao-contato">
+            <div class="contato-width">
+                <div class="contato-header">
+                    <h1>Contato</h1>
+                </div>
+                <div class="contato-content">
+                    <div class="contato-content--left">
+                        <img class="img" src="https://png.pngtree.com/thumb_back/fw800/background/20190223/ourmid/pngtree-atmospheric-blue-light-effect-electronic-technology-background-backgroundlight-effect-backgroundelectronic-image_72723.jpg" alt="">
+                    </div>
+                    <div class="contato-content--right">
+                        <form id="form" class="form">
+                            <div class="group">
+                                <label for="name">Nome:</label>
+                                <input type="text" name="name" id="name" class="input" placeholder="Digite seu nome:">
+                                <span class="contato-erro">Nome precisa ter no mínimo 2 caracteres</span>
+                            </div>
+                            <div class="group">
+                                <label for="email">Email:</label>
+                                <input type="text" name="email" id="email" class="input" placeholder="Digite seu melhor email:">
+                                <span class="contato-erro">Digite um e-mail válido</span>
+                            </div>
+                            <div class="group">
+                                <label for="textarea">Mensagem:</label>
+                                <textarea name="textarea" id="textarea" class="input" placeholder="Deixe seu feedback para o desenvolvedor:)  "></textarea>
+                                <span class="contato-erro">Campo não pode ser enviado vazio</span>
+                            </div>
+                            <div class="group">
+                                <button type="submit" class="btn btn-contato">Enviar!</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
        
 
 
@@ -225,35 +261,7 @@
 
 
 
-        <!-- <section class="sessao-contato" id="contato">
-            <div class="contato-wrapper">
-                <div class="contato-left"></div>
-                <div class="contato-right">
-                    <h1>Contato</h1>
-                    <form action="" method="post">
-                        <div class="input-group">
-                            <input type="text" class="field" id="nome">
-                            <label for="nome" class="field-label">Nome</label>
-                            <span class="erro">Campo Obrigatório</span>
-                        </div>
-
-                        <div class="input-group">
-                            <input type="text" class="field" id="email">
-                            <label for="email" class="field-label">E-mail</label>
-                            <span class="erro">Digite um E-mail válido</span>
-                        </div>
-
-                        <div class="input-group">
-                            <textarea class="field" id="mensagem" placeholder="Deixe seu feedback para o desenvolvedor do site..."></textarea>
-                            <label for="mensagem" class="field-label"></label>
-                            <span class="erro">Campo não pode ser vazio</span>
-                        </div>
-
-                        <button type="submit" class="btn btn-submit">Enviar</button>
-                    </form>
-                </div>
-            </div>
-        </section> -->
+        
 
         <section class="sessao-orçamento" id="orçamento">
             <div class="orçamento-wrapper">
